2006-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c (VfsOpenFileChannel): handle closing channels that
	were inherited as std channels. [Bug 1468291]

2006-03-12  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: provide caching of listings to improve
	performance for many standard use cases.

2006-02-27  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: Small optimization so a writable starkit
	does not cause a real commit if no changes at all were made.

2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: update to TEA 3.5
	* tclconfig/tcl.m4:        TEA rcs 1.89 2006/01/25 21:25:02

2006-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure: update to TEA 3.4 interim

2005-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure.in, configure: update to TEA 3.4

2005-11-10  Jean-Claude Wippler  <jcw@equi4.com>

	* Makefile.in: added missing mkclvfs.tcl dependency

2005-11-09  Andreas Kupries <andreask@activestate.com>

	* library/vfslib.tcl:  Brought the version numbers of provide
	* library/starkit.tcl: and ifneeded commands back into sync.

2005-11-04  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: some more thrill api mods
	* pkgIndex.tcl.in, library/pkgIndex.tcl: bumped to 1.2

2005-11-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: renamed vlerq package to thrill
	* pkgIndex.tcl.in, library/pkgIndex.tcl: bumped to 1.1

2005-10-19  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl: added fallback to new vfs::mkcl
	* library/mkclvfs.tcl: new MK Compatible Lite driver
	* pkgIndex.tcl.in, library/pkgIndex.tcl: adjusted

2005-08-31  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: despite lack of documentation on this point,
	VfsMatchInDirectory should really allow a NULL interp, even in
	error situations.  Tcl 8.5 now documents that this is allowed.

2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>